fix: remove incorrect SRI on Socket.IO CDN to restore window.io

--- a/client/index.html
+++ b/client/index.html
@@ -156,7 +156,7 @@
       <canvas id="canvas"></canvas>
     </main>
   </div>
-  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-Gwh9Jk0n3rZqv8bKz2Bf8qYgZQqk2hQ3t1w1vX0mE0zG1y1b9YpZK0kqQX8k7T0h" crossorigin="anonymous"></script>
+  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   <script src="./dist/bundle.js"></script>
 </body>
 </html>
